--- a/smarthomeNG/items/warp_charger.yaml
+++ b/smarthomeNG/items/warp_charger.yaml
@@ -1068,8 +1068,78 @@ warp_charger:
               # - .index11.charge_duration = value[11]['charge_duration']
               # - .index11.user_id = value[11]['user_id']
               # - .index11.energy_charged = value[11]['energy_charged']
-              
-              # Fehlend: Index 12 bis 29
+              # - .index12.timestamp_minutes = value[12]['timestamp_minutes']
+              # - .index12.charge_duration = value[12]['charge_duration']
+              # - .index12.user_id = value[12]['user_id']
+              # - .index12.energy_charged = value[12]['energy_charged']
+              # - .index13.timestamp_minutes = value[13]['timestamp_minutes']
+              # - .index13.charge_duration = value[13]['charge_duration']
+              # - .index13.user_id = value[13]['user_id']
+              # - .index13.energy_charged = value[13]['energy_charged']
+              # - .index14.timestamp_minutes = value[14]['timestamp_minutes']
+              # - .index14.charge_duration = value[14]['charge_duration']
+              # - .index14.user_id = value[14]['user_id']
+              # - .index14.energy_charged = value[14]['energy_charged']
+              # - .index15.timestamp_minutes = value[15]['timestamp_minutes']
+              # - .index15.charge_duration = value[15]['charge_duration']
+              # - .index15.user_id = value[15]['user_id']
+              # - .index15.energy_charged = value[15]['energy_charged']
+              # - .index16.timestamp_minutes = value[16]['timestamp_minutes']
+              # - .index16.charge_duration = value[16]['charge_duration']
+              # - .index16.user_id = value[16]['user_id']
+              # - .index16.energy_charged = value[16]['energy_charged']
+              # - .index17.timestamp_minutes = value[17]['timestamp_minutes']
+              # - .index17.charge_duration = value[17]['charge_duration']
+              # - .index17.user_id = value[17]['user_id']
+              # - .index17.energy_charged = value[17]['energy_charged']
+              # - .index18.timestamp_minutes = value[18]['timestamp_minutes']
+              # - .index18.charge_duration = value[18]['charge_duration']
+              # - .index18.user_id = value[18]['user_id']
+              # - .index18.energy_charged = value[18]['energy_charged']
+              # - .index19.timestamp_minutes = value[19]['timestamp_minutes']
+              # - .index19.charge_duration = value[19]['charge_duration']
+              # - .index19.user_id = value[19]['user_id']
+              # - .index19.energy_charged = value[19]['energy_charged']
+              # - .index20.timestamp_minutes = value[20]['timestamp_minutes']
+              # - .index20.charge_duration = value[20]['charge_duration']
+              # - .index20.user_id = value[20]['user_id']
+              # - .index20.energy_charged = value[20]['energy_charged']
+              # - .index21.timestamp_minutes = value[21]['timestamp_minutes']
+              # - .index21.charge_duration = value[21]['charge_duration']
+              # - .index21.user_id = value[21]['user_id']
+              # - .index21.energy_charged = value[21]['energy_charged']
+              # - .index22.timestamp_minutes = value[22]['timestamp_minutes']
+              # - .index22.charge_duration = value[22]['charge_duration']
+              # - .index22.user_id = value[22]['user_id']
+              # - .index22.energy_charged = value[22]['energy_charged']
+              # - .index23.timestamp_minutes = value[23]['timestamp_minutes']
+              # - .index23.charge_duration = value[23]['charge_duration']
+              # - .index23.user_id = value[23]['user_id']
+              # - .index23.energy_charged = value[23]['energy_charged']
+              # - .index24.timestamp_minutes = value[24]['timestamp_minutes']
+              # - .index24.charge_duration = value[24]['charge_duration']
+              # - .index24.user_id = value[24]['user_id']
+              # - .index24.energy_charged = value[24]['energy_charged']
+              # - .index25.timestamp_minutes = value[25]['timestamp_minutes']
+              # - .index25.charge_duration = value[25]['charge_duration']
+              # - .index25.user_id = value[25]['user_id']
+              # - .index25.energy_charged = value[25]['energy_charged']
+              # - .index26.timestamp_minutes = value[26]['timestamp_minutes']
+              # - .index26.charge_duration = value[26]['charge_duration']
+              # - .index26.user_id = value[26]['user_id']
+              # - .index26.energy_charged = value[26]['energy_charged']
+              # - .index27.timestamp_minutes = value[27]['timestamp_minutes']
+              # - .index27.charge_duration = value[27]['charge_duration']
+              # - .index27.user_id = value[27]['user_id']
+              # - .index27.energy_charged = value[27]['energy_charged']
+              # - .index28.timestamp_minutes = value[28]['timestamp_minutes']
+              # - .index28.charge_duration = value[28]['charge_duration']
+              # - .index28.user_id = value[28]['user_id']
+              # - .index28.energy_charged = value[28]['energy_charged']
+              # - .index29.timestamp_minutes = value[29]['timestamp_minutes']
+              # - .index29.charge_duration = value[29]['charge_duration']
+              # - .index29.user_id = value[29]['user_id']
+              # - .index29.energy_charged = value[29]['energy_charged']
               
             index0:
                 name: Index 0
